force-app/main/default/objects/ppmail__Mail_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>ppmail__Clicked__c</fullName>
        <formula>ppmail__First_Click_Timestamp__c &lt;&gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ppmail__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mail Trackings</relationshipLabel>
        <relationshipName>Mail_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ppmail__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ppmail__External_Message_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Message ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ppmail__First_Click_Date_Time__c</fullName>
        <formula>IF(ppmail__First_Click_Timestamp__c &lt;&gt; 0, FROMUNIXTIME(ppmail__First_Click_Timestamp__c), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Click Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ppmail__First_Click_Timestamp__c</fullName>
        <label>First Click Timestamp</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppmail__First_Opened_Date_Time__c</fullName>
        <formula>IF(ppmail__First_Opened_Timestamp__c &lt;&gt; 0, FROMUNIXTIME(ppmail__First_Opened_Timestamp__c), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Opened Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ppmail__First_Opened_Timestamp__c</fullName>
        <label>First Opened Timestamp</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppmail__Last_Click_Date_Time__c</fullName>
        <formula>IF(ppmail__Last_Click_Timestamp__c &lt;&gt; 0, FROMUNIXTIME(ppmail__Last_Click_Timestamp__c), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Click Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ppmail__Last_Click_Timestamp__c</fullName>
        <label>Last Click Timestamp</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppmail__Last_Event_Date_Time__c</fullName>
        <formula>IF(ppmail__Last_Event_Timestamp__c &lt;&gt; 0, FROMUNIXTIME(ppmail__Last_Event_Timestamp__c), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Event Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ppmail__Last_Event_Timestamp__c</fullName>
        <label>Last Event Timestamp</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppmail__Last_Opened_Date_Time__c</fullName>
        <formula>IF(ppmail__Last_Opened_Timestamp__c &lt;&gt; 0, FROMUNIXTIME(ppmail__Last_Opened_Timestamp__c), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Opened Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ppmail__Last_Opened_Timestamp__c</fullName>
        <label>Last Opened Timestamp</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppmail__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Mail Trackings</relationshipLabel>
        <relationshipName>Mail_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ppmail__Mail_Sending_Batch__c</fullName>
        <label>Mail Sending Batch</label>
        <referenceTo>ppmail__Mail_Sending_Batch__c</referenceTo>
        <relationshipLabel>Mail Trackings</relationshipLabel>
        <relationshipName>Mail_Trackings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ppmail__Number_of_Clicks__c</fullName>
        <label>Number of Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppmail__Number_of_Opens__c</fullName>
        <label>Number of Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppmail__Opened__c</fullName>
        <formula>ppmail__First_Opened_Timestamp__c &lt;&gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ppmail__Status_Details__c</fullName>
        <label>Status Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ppmail__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Bounced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ppmail__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mail_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mail Tracking</label>
    <nameField>
        <displayFormat>MT-{000000000}</displayFormat>
        <label>Mail Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mail Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>